--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -8,6 +8,9 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <connectionStrings>
+    <add connectionString="Data Source=127.0.0.1;Initial Catalog=ZT_Master_0512;Persist Security Info=True;User ID=sa;Password=1;" name="ConnectionString_MSSQL" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
