--- a/CSLib/CSLib.csproj
+++ b/CSLib/CSLib.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BackEnd\DB\DBHelper.cs" />
     <Compile Include="BackEnd\DB\EXESQLRET.cs" />
     <Compile Include="BackEnd\DB\MSSQLHelper.cs" />
+    <Compile Include="BackEnd\EnDecryption\DES.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
