数据库操作类方法添加错误日志

--- a/CSLib/CSLib.csproj
+++ b/CSLib/CSLib.csproj
@@ -55,7 +55,6 @@
     <Compile Include="BackEnd\DB\MSSQLHelper.cs" />
     <Compile Include="BackEnd\EnDecryption\DES.cs" />
     <Compile Include="BackEnd\JSon\ConvertToJson.cs" />
-    <Compile Include="BackEnd\LOG\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,7 +63,9 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="BackEnd\LOG\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
