--- a/CSLib/log4net.config
+++ b/CSLib/log4net.config
@@ -1,21 +1,15 @@
 ﻿<log4net>
   <root>
     <level value="ALL" />
-    <appender-ref ref="console" />
-    <appender-ref ref="file" />
+    <appender-ref ref="RollingFileAppender" />
   </root>
-  <appender name="console" type="log4net.Appender.ConsoleAppender">
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date %level %logger - %message%newline" />
-    </layout>
-  </appender>
-  <appender name="file" type="log4net.Appender.RollingFileAppender">
-    <file value="D:\myapp.log" />
+  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+    <file value="E:\WebLog\Lib\log_" />
     <appendToFile value="true" />
-    <rollingStyle value="Size" />
-    <maxSizeRollBackups value="5" />
-    <maximumFileSize value="10MB" />
-    <staticLogFileName value="true" />
+    <rollingStyle value="Date" />
+    <datePattern value="yyyy-MM-dd'.txt'" />
+    <staticLogFileName value="false" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
     </layout>
