前台分页重构，形成简单js分页类

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -141,6 +141,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\MyJsLib\MyJsLib.js" />
+    <Content Include="Scripts\MyJsLib\MyPageList.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
